crates/xlate/tests/snapshots/golden_matrix__meta_user_field__gpt-4o-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Say ok."
        }
      ]
    }
  ],
  "max_output_tokens": 32,
  "user": "e2e-20260910-042135"
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
